@@ -44,14 +44,17 @@ commons-validator.jar = ${project.dir}/lib/optional/commons-validator.jar
 # File path to struts file for tile support
 struts.jar = ${project.dir}/lib/optional/struts.jar
 
-# Destination file path of MyFaces implementation archive to be created
-myfaces.jar = ${project.dir}/lib/myfaces.jar
-
 # Destination file path of MyFaces JSF-API implementation archive to be created
 myfaces-jsf-api.jar = ${project.dir}/lib/myfaces-jsf-api.jar
 
-# Destination file path of MyFaces components archive to be created
-myfaces-components.jar = ${project.dir}/lib/myfaces-components.jar
+# Destination file path of MyFaces implementation archive to be created
+myfaces-impl.jar = ${project.dir}/lib/myfaces-impl.jar
+
+# Destination file path of MyFaces extensions archive to be created
+myfaces-extensions.jar = ${project.dir}/lib/myfaces-extensions.jar
+
+# Destination file path of MyFaces complete archive to be created
+myfaces.jar = ${project.dir}/lib/myfaces.jar
 
 # Compiler optimize and debug flags
 javac.optimize = off
