@@ -4,3 +4,5 @@ velocity-dep-1.3.1.jar
 junit.jar
 myfaces-components.jar
 myfaces-jsf-api.jar
+myfaces-impl.jar
+myfaces-extensions.jar
